changes in doxygen

--- a/c++/documentation/latex/classBinaryTree.tex
+++ b/c++/documentation/latex/classBinaryTree.tex
@@ -17,10 +17,6 @@ struct \mbox{\hyperlink{structBinaryTree_1_1Node}{Node}}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-const TV \& \mbox{\hyperlink{classBinaryTree_ab5087864bf9bd49c1e5a79640066e34e}{operator\mbox{[}$\,$\mbox{]}}} (const TK \&key) const
-\item 
-TV \& \mbox{\hyperlink{classBinaryTree_a21bebae9adf0939f622b2bb47540694a}{operator\mbox{[}$\,$\mbox{]}}} (const TK \&key)
-\item 
 \mbox{\hyperlink{classBinaryTree_a18b4981a8d885a296b144462729c0679}{Binary\+Tree}} ()
 \item 
 \mbox{\hyperlink{classBinaryTree_a8cfb4f89d47accb81042824dca065946}{Binary\+Tree}} (const \mbox{\hyperlink{classBinaryTree}{Binary\+Tree}} \&)
@@ -30,6 +26,10 @@ TV \& \mbox{\hyperlink{classBinaryTree_a21bebae9adf0939f622b2bb47540694a}{operat
 \mbox{\hyperlink{classBinaryTree_a22a4831494c378f556151e321cdf917b}{Binary\+Tree}} (\mbox{\hyperlink{classBinaryTree}{Binary\+Tree}} \&\&bt) noexcept
 \item 
 \mbox{\hyperlink{classBinaryTree}{Binary\+Tree}} \& \mbox{\hyperlink{classBinaryTree_a6a3f46892900021d0e7304d762c47af8}{operator=}} (\mbox{\hyperlink{classBinaryTree}{Binary\+Tree}} \&\&bt) noexcept
+\item 
+const TV \& \mbox{\hyperlink{classBinaryTree_ab5087864bf9bd49c1e5a79640066e34e}{operator\mbox{[}$\,$\mbox{]}}} (const TK \&key) const
+\item 
+TV \& \mbox{\hyperlink{classBinaryTree_a21bebae9adf0939f622b2bb47540694a}{operator\mbox{[}$\,$\mbox{]}}} (const TK \&key)
 \item 
 \mbox{\hyperlink{classBinaryTree_1_1Iterator}{Iterator}} \mbox{\hyperlink{classBinaryTree_a828acf65e70cf4b6e106807a052ca508}{begin}} ()
 \item 
@@ -66,6 +66,9 @@ std\+::size\+\_\+t \mbox{\hyperlink{classBinaryTree_a8e35d6be680d9fbd5129361337a
 void \mbox{\hyperlink{classBinaryTree_a01dfd4a677465fbc20923794e2363b44}{copy\+\_\+node}} (const \mbox{\hyperlink{structBinaryTree_1_1Node}{Node}} $\ast$np)
 \item 
 void \mbox{\hyperlink{classBinaryTree_a1c3972b0a02afa3c6c35dcad6b8440c5}{balance}} (\mbox{\hyperlink{classBinaryTree}{Binary\+Tree}} \&balance\+Tree, \mbox{\hyperlink{classBinaryTree_1_1Iterator}{Iterator}} \mbox{\hyperlink{classBinaryTree_a828acf65e70cf4b6e106807a052ca508}{begin}}, std\+::size\+\_\+t loc\+Size)
+\item 
+\mbox{\Hypertarget{classBinaryTree_ae92d2f804f2aecbd2f769ebd8534e02e}\label{classBinaryTree_ae92d2f804f2aecbd2f769ebd8534e02e}} 
+void {\bfseries dummy\+\_\+func} (\mbox{\hyperlink{classBinaryTree_1_1Iterator}{Iterator}} it)
 \end{DoxyCompactItemize}
 \subsection*{Private Attributes}
 \begin{DoxyCompactItemize}
