--- a/c++/documentation/latex/index.tex
+++ b/c++/documentation/latex/index.tex
@@ -7,28 +7,66 @@ For this exercise we were asked to implement a binary tree class.
 
 {\ttfamily Main.\+cpp} contains the implementation of the class as well as a few simple tests to check the different methods of the class and a benchmark of its performance (how the find method performs).
 
-Full {\ttfamily doxygen} documentation of the code is available in the documentation folder. Check {\ttfamily index.\+html} file for a supreme experience.
+Full {\ttfamily doxygen} documentation of the code is available in the documentation folder. (Check {\ttfamily index.\+html}).
 
-To run either the test or the benchmark execute the following commands\+:
+Running either the tests or the benchmark can be done through the {\ttfamily Makefile} . To run the test execute the following command\+:
 
-Figure 1 shows the results of the benchark. We compared the perfomance of the following data structures\+:
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{\$ make test}
+\end{DoxyCode}
+
+
+To run the benchmark and plot the results execute the following commands\+:
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{\$ make benchmark}
+\DoxyCodeLine{\$ make plot}
+\end{DoxyCode}
+
+
+In order to check for memory leaks with {\ttfamily valgrind}, run\+:
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{\$ make debug}
+\end{DoxyCode}
+
+
+Finally, In order to clean up the directory from binaries, generated benchmark data and images, run\+:
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{\$ make clean}
+\end{DoxyCode}
+
+
+Figure 1 shows the results of the benchmark. We compared the performance of the following data structures\+:
 
 
 \begin{DoxyItemize}
-\item A linked list (actually it is our binary tree with nodes inserted in ascending order)
-\item A
-\item 
+\item A linked list (actually it is our binary tree with nodes inserted in ascending order).
+\item A balanced binary tree (the result of applying the the function {\ttfamily balance()} to the previous structure).
+\item A std\+::map from the standard library.
 \end{DoxyItemize}
 
+ 
+\begin{DoxyImage}
+\includegraphics[width=\textwidth,height=\textheight/2,keepaspectratio=true]{benchmark.png}
+\doxyfigcaption{Figure 1\+: Benchmark results for the three different data types}
+\end{DoxyImage}
+  
 
+The figure shows the search times for the 3 structures, depending on the number of nodes (The number of nodes is varied from 100 to 30000). All structures contain the same data nodes and all look for the same random keys (the wall time is used as the seed of random numbers, so the keys to search are always different in each run). To reduce the statistical errors associated with time fluctuations, two levels of repetitions are used\+: a first series within the program that adds up the required search times for a set of common keys for the three structures inside a for-\/loop, and a second series of repetitions made by a bash script {\ttfamily runner.\+sh} that repeats the measurements of the previous times for different sizes of the structures. The appropriate calculations of averages and standard deviations are carried out by that same script. As can be seen, the search times of the linked list are considerably higher.
 
-Comentario de la figura (log(n) vs n) y como es la estadística.
+The difference in time between the balanced binary tree and std \+:: map are similar for low numbers of nodes, however std \+:: map ends up having a clearly superior performance for larger structures.
 
 Lastly, some comments about the implementation of two important functions of the class\+: {\ttfamily insert()} and {\ttfamily find()}.
 
-The core of both functions is another function, {\ttfamily pos\+\_\+find(\+T\+K\& key)}, which works as follows. It takes a key as an argument and returns a pointer to the node which matches that key. If the key is not present in the {\ttfamily \mbox{\hyperlink{classBinaryTree}{Binary\+Tree}}} then it returns a pointer to the node directly above this missing key. By doing this, it simplifies the implementation of insert() and find(), which with almost all the work done for them, they just need a simple if condition to return what they are suppose to.
+The core of both functions is another function, {\ttfamily pos\+\_\+find(\+T\+K\& key)}, which works as follows. It takes a key as an argument and returns a pointer to the node which matches that key. If the key is not present in the {\ttfamily \mbox{\hyperlink{classBinaryTree}{Binary\+Tree}}} then it returns a pointer to the node directly above this missing key. By doing this, it simplifies the implementation of {\ttfamily insert()} and {\ttfamily find()}, which with almost all the work done for them, they just need a simple if condition to return what they are suppose to.
 
 \DoxyHorRuler
 
 
-{\bfseries{Small comment}}\+: Although optional, we implemented the operator\mbox{[}\mbox{]} in both of its versions. Both of them work, but for the const version we decided to throw an exception if the key you are looking is not in the tree. We are not sure if this is the best implementation. 
+{\bfseries{Extra comment}}\+: Although optional, we implemented the {\ttfamily operator\mbox{[}\mbox{]}} in both of its versions. Both of them work, but for the const version we decided to throw an exception if the key you are looking is not in the tree. We are not sure if this is the best implementation. 
