--- a/c++/documentation/latex/structBinaryTree_1_1Node.tex
+++ b/c++/documentation/latex/structBinaryTree_1_1Node.tex
@@ -15,6 +15,9 @@ A struct that contains the data of each node in the \mbox{\hyperlink{classBinary
 \mbox{\hyperlink{structBinaryTree_1_1Node_ac4125f9e0b3d8a75cc0f1c7bbcc5d838}{Node}} ()=default
 \item 
 \mbox{\hyperlink{structBinaryTree_1_1Node_a3af4f97d0e37aaaa62fa9b3cc15864fb}{$\sim$\+Node}} ()
+\item 
+\mbox{\Hypertarget{structBinaryTree_1_1Node_ae3026e842cac37f99326e26d62835f57}\label{structBinaryTree_1_1Node_ae3026e842cac37f99326e26d62835f57}} 
+void {\bfseries print\+\_\+node} ()
 \end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
