--- a/c++/documentation/config.dox
+++ b/c++/documentation/config.dox
@@ -821,7 +821,7 @@ WARN_LOGFILE           =
 
 INPUT                  = ../main.cc
 INPUT                  += ../README.md
-INPUT                  += ./images/benchmark.png
+INPUT                  += ./images/benchmark__clustercluster.png
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -958,7 +958,7 @@ EXAMPLE_RECURSIVE      = NO
 # that contain images that are to be included in the documentation (see the
 # \image command).
 
-IMAGE_PATH             = ./images/benchmark.png
+IMAGE_PATH             = ./images/benchmark_cluster.png
 
 # The INPUT_FILTER tag can be used to specify a program that doxygen should
 # invoke to filter for each input file. Doxygen will invoke the filter program
@@ -1690,7 +1690,7 @@ EXTRA_SEARCH_MAPPINGS  =
 # If the GENERATE_LATEX tag is set to YES, doxygen will generate LaTeX output.
 # The default value is: YES.
 
-GENERATE_LATEX         = YES
+GENERATE_LATEX         = NO
 
 # The LATEX_OUTPUT tag is used to specify where the LaTeX docs will be put. If a
 # relative path is entered the value of OUTPUT_DIRECTORY will be put in front of
